# piloting_gcs

./: .gitmodules  README.md
mavsdk_catkin/: CMakeLists.txt  package.xml
mavsdk_catkin/cmake/: extras.cmake.in
piloting_ugv_client/: CMakeLists.txt  package.xml
piloting_ugv_client/include/piloting_ugv_client/: client_node.h  parameters.h
piloting_ugv_client/launch/: client.launch  demo_server.launch
piloting_ugv_client/src/: client_node.cpp  client_services.cpp  client_subscribers.cpp  main.cpp  parameters.cpp
