<?xml version="1.0"?>
<package format="2">
  <name>mavsdk_catkin</name>
  <version>0.0.0</version>
  <description>The masdk_catkin package</description>

  <maintainer email="giuseppe@todo.todo">giuseppe</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
