<?xml version="1.0"?>
<package format="2">

   <name>piloting_ugv_client</name>
   <version>0.1.0</version>
   <description>The piloting_ugv_client package</description>

   <maintainer email="rcaballero@catec.aero">Rafael Caballero González</maintainer>

   <license>BSD</license>

   <buildtool_depend>catkin</buildtool_depend>

   <depend>rospy</depend>
   <depend>roscpp</depend>
   <depend>std_msgs</depend>
   <depend>mavsdk_catkin</depend>
   <depend>geometry_msgs</depend>
   <depend>message_filters</depend>
   <depend>message_runtime</depend>
   <depend>message_generation</depend>

</package>
